Increase coverage and fixes.
Signed-off-by: Anne Tilloy <anne.tilloy@rte-france.com>